atualizacao path
